[project]
name = "pubmed-fetcher"
version = "0.1.0"
description = "A project to fetch papers from PubMed API and save to CSV"
authors = [
    {name = "prashanthn21",email = "prashanthnallaveni@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]




[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "pubmed-fetcher.cli:main"